--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express": "^4.10.2",
     "kerberos": "0.0.21",
     "mongodb": "^2.0.55"
+  },
+  "scripts": {
+  	"start": "index.js"
   }
 }
